# mlops-flows

./: README.md
01-mlflow-gcp-cloudrun/: Dockerfile  README.md  entry-point.sh  pyproject.toml  skaffold.yaml
01-mlflow-gcp-cloudrun/deploy/production/: service.yaml
02-mlflow-wine-pred-endpoint/: Dockerfile  README.md  pyproject.toml  skaffold.yaml
02-mlflow-wine-pred-endpoint/app/: basic_auth.py  main.py  settings.py
02-mlflow-wine-pred-endpoint/app/helpers/: load_mlflow_models.py  models.py
02-mlflow-wine-pred-endpoint/deploy/production/: service.yaml
03-mlflow-wine-streamlit/: Dockerfile  README.md  pyproject.toml  skaffold.yaml
03-mlflow-wine-streamlit/app/: basic_auth.py  gcp_secrets.py  main.py  settings.py
03-mlflow-wine-streamlit/deploy/production/: service.yaml
04-vertexai-ep-streamlit/: Dockerfile  README.md  pyproject.toml  skaffold.yaml
04-vertexai-ep-streamlit/app/: common_func.py  main.py  settings.py
04-vertexai-ep-streamlit/deploy/production/: service.yaml
05-kserve-k8s-streamlit/: Dockerfile  README.md  pyproject.toml  skaffold.yaml
05-kserve-k8s-streamlit/app/: basic_auth.py  main.py  settings.py
05-kserve-k8s-streamlit/deploy/common/: config.yaml  deployment.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml
05-kserve-k8s-streamlit/deploy/production/: kustomization.yaml
