[tool.poetry]
name = "mlflow-gcp-cloudrun"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

requests = "^2.32.0"
google-cloud-storage = "2.9.0"
google-cloud-secret-manager = "2.16.1"

mlflow = "2.14.1"
click = "8.1.3"
pg8000 = "1.29.3"
wsgi-basic-auth = "1.1.0"
gunicorn = "20.1.0"
psycopg2-binary = "2.9.6"


openai = "^1.7.1"
pandas = "1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
