[tool.poetry]
name = "mlflow-wine-streamlit"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

requests = "^2.31.0"
pandas = "2.2.2"
streamlit = "^1.12.0"
altair = "^4.0"
plotly = "^5.16.1"

pydantic-settings = "^2.2.1"

google-cloud-secret-manager = "^2.16.3"
google-cloud-logging = "^3.8.0"
google-cloud-storage = "^2.10.0"

fastapi = "^0.104.1"

[build-system]
requires = ["poetry-core>=1.4.1"]
build-backend = "poetry.core.masonry.api"
